# CudaNeuralNetwork

./: .gitignore  CMakeLists.txt  dummy.cpp  main.cu
src/: NeuralNetwork.cu  NeuralNetwork.h
src/CostFunctions/: BinaryCrossEntropy.cu  BinaryCrossEntropy.h  CostFunctions.h
src/cost_functions/: BinaryCrossEntropy.cu  BinaryCrossEntropy.h  CostFunction.h
src/datasets/: MNISTParser.h  PulsarParser.h
src/layers/: Layer.h  LinearLayer.cu  LinearLayer.h  ReluLayer.cu  ReluLayer.h  SigmoidLayer.cu  SigmoidLayer.h
src/utils/: Matrix.cu  Matrix.h  common.h  cudamath.cu  cudamath.h
